# smart_decorator

./: .gitignore  LICENSE  README.md  generate_readme_tests.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
smart_decorator/: __init__.py  _types.py  method_decorator.pyi  simple_decorator.pyi  smart_decorator.py  smart_decorator.pyi  types.py
tests/: test_simple_decorator.py
