[tool.poetry]
name = "smart_decorator"
version = "0.1.0"
description = "A modern library for creating decorators. Static-typed."
authors = ["Marckie Zeender <mkzeender@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"